css/index.css
body {
  font-family: "PT Sans", sans-serif;
  margin: 20px;
  line-height: 1.4;
  font-size: 16px;
}

pre {
  font-family: "PT Sans", sans-serif;
  line-height: 1.4;
  font-size: 16px;
}

main {
  padding: 20px;
}

.warning {
  color: #ccc;
  margin-top: -15px;
}

.error {
  color: rgb(255, 0, 0);
  margin-top: -15px;
  margin-bottom: 30px;
}

li {
  margin-bottom: 10px;
}

.song-navigation {
  display: flex;
  justify-items: center;
  align-items: center;
}

.song-navigation__item:nth-child(1) {
  margin-right: 20px;
}

.credentials {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #ccc;
}

.credentials__description {
  margin-bottom: 0px;
}

.main-navigation {
  display: flex;
}

.main-navigation__item {
  margin-right: 10px;
}

